syntax = "proto3";

package fleetspeak.stdinservice;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/google/fleetspeak/fleetspeak/src/client/stdinservice/proto/fleetspeak_stdinservice";

message InputMessage {
  // The data to be forwarded to the service.
  bytes input = 1;

  // Command line arguments.
  // These arguments are appended to the arguments specified in the config.
  repeated string args = 2;
}

message OutputMessage {
  bytes stdout = 1;
  bytes stderr = 2;

  // When the message was generated.
  google.protobuf.Timestamp timestamp = 4;

  reserved 3;
}
